# lithx

./: CHANGELOG.md  README.md  cabal.project  lithx.cabal  notes.txt
app/: Main.hs  ToC.hs
examples/001/: input.lith
examples/002/: input.lith
examples/003/: input.lith
examples/004/: input.lith
examples/005/: input.lith
examples/006/: input.lith
examples/007/: input.lith
examples/008/: input.c  input.dump-asm  input.hs  input.lith  input.s
src-constantfold/: Identifier.hsig
src-constantfold/Lith/ConstantFold/: Decorate.hs  Run.hs
src-constantfold/Lith/Term/: ConstantFold.hs
src-constantfoldanno/: Identifier.hsig  Shape.hs  TermAnnotationShape.hs
src-constantfoldannoshow/: TermAnnotationShapeShow.hs
src-datasolve/: Machine.hsig
src-datasolve/Lith/: Datasolve.hs
src-demand/: Identifier.hsig
src-demand/Lith/Demand/: Compute.hs  DeadCodeElimination.hs  FloatIn.hs
src-demandanno/: Identifier.hsig  TermAnnotationDemand.hs
src-demandannoshow/: Identifier.hsig  TermAnnotationDemandShow.hs
src-eq/: ConIdentifier.hsig  FieldIdentifier.hsig  LoopIdentifier.hsig
src-eq/Lith/Term/: Eq.hs
src-ident/: Identifier.hsig
src-ident/Lith/: NamedIdentifier.hs
src-impl/: Builder.hs  C.hs  ConIdentifierInt.hs  ConIdentifierNone.hs  ConIdentifierShortText.hs  FieldIdentifierInt.hs  FieldIdentifierNone.hs  FieldIdentifierShortText.hs  FreshIdentifierMachineStateInt.hs  FunctionIdentifierNone.hs  FunctionIdentifierShortText.hs  FunctionTypeAnnotationIdentity.hs  FunctionTypeAnnotationMaybe.hs  IdentifierInt.hs  IdentifierNone.hs  IdentifierShortText.hs  LitTypeAnnotationOptional.hs  LoopIdentifierInt.hs  LoopIdentifierNone.hs  MachineEither.hs  MachineStateInt.hs  Order.hs  StepIdentity.hs  TermAnnotationIntSet.hs  TermAnnotationNone.hs  TermTypeAnnotationIdentity.hs  TermTypeAnnotationNone.hs  TyVarIdentifierInt.hs  TyVarIdentifierShortText.hs
src-prim/Lith/: Primitive.hs
src-resolve/: FreshIdentifier.hsig  Machine.hsig
src-resolve/Lith/: Resolve.hs
src-show/: Identifier.hsig  TermAnnotation.hsig  TermAnnotationShow.hsig
src-show/Lith/: Show.hs
src-syntax/Lith/: Parse.hs
src-term/: FieldIdentifier.hsig  FunctionIdentifier.hsig  FunctionTypeAnnotation.hsig  Identifier.hsig  LoopIdentifier.hsig  Sig.hsig  TermAnnotation.hsig  TermTypeAnnotation.hsig
src-term/Lith/: Term.hs
src-type/: ConIdentifier.hsig  Sig.hsig  TyVarIdentifier.hsig
src-type/Lith/: Type.hs
src-typeanno/: TermTypeAnnotationType.hs
src-typesynth/: ConIdentifier.hsig  FieldIdentifier.hsig  FunctionIdentifier.hsig  Identifier.hsig  LoopIdentifier.hsig
src-typesynth/Lith/: Typesynth.hs
